# osh

./: .gitignore  LICENSE  README.md  ask.py  install.sh  osh.py  pyproject.toml  requirements.txt
.claude/: settings.json
debian/: changelog  control  copyright  files  install  rules
